// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stake Modals With Stake Sdk Provider should render correctly stake modal with stake sdk provider and resolve the stake context 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      {
                        "backgroundColor": "transparent",
                      },
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      onLayout={[Function]}
                      style={
                        [
                          {
                            "bottom": 0,
                            "justifyContent": "flex-end",
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          },
                          {
                            "paddingBottom": 0,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "backgroundColor": "#00000099",
                              "bottom": 0,
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                            },
                            {
                              "opacity": 0,
                            },
                          ]
                        }
                      >
                        <TouchableOpacity
                          onPress={[Function]}
                          style={
                            {
                              "flex": 1,
                            }
                          }
                        />
                      </View>
                      <View
                        onLayout={[Function]}
                        style={
                          [
                            {
                              "bottom": 0,
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                            },
                            {
                              "paddingBottom": 0,
                            },
                          ]
                        }
                      >
                        <View
                          collapsable={false}
                          onGestureHandlerEvent={[Function]}
                          onGestureHandlerStateChange={[Function]}
                          onLayout={[Function]}
                          style={
                            [
                              {
                                "backgroundColor": "#ffffff",
                                "borderColor": "#bbc0c566",
                                "borderTopLeftRadius": 8,
                                "borderTopRightRadius": 8,
                                "borderWidth": 1,
                                "maxHeight": 1314,
                                "overflow": "hidden",
                                "paddingBottom": 0,
                                "shadowColor": "#0000001a",
                                "shadowOffset": {
                                  "height": 2,
                                  "width": 0,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 40,
                              },
                              {
                                "transform": [
                                  {
                                    "translateY": 1334,
                                  },
                                ],
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "padding": 4,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "backgroundColor": "#bbc0c566",
                                  "borderRadius": 2,
                                  "height": 4,
                                  "width": 40,
                                }
                              }
                            />
                          </View>
                          <View
                            style={
                              {
                                "paddingHorizontal": 24,
                                "paddingTop": 24,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "paddingBottom": 16,
                                }
                              }
                            >
                              <Image
                                source={
                                  {
                                    "uri": "MockImage",
                                  }
                                }
                                style={
                                  {
                                    "borderRadius": 12,
                                    "height": 200,
                                    "width": "100%",
                                  }
                                }
                              />
                            </View>
                            <View
                              style={
                                {
                                  "paddingVertical": 8,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#141618",
                                    "fontFamily": "EuclidCircularB-Bold",
                                    "fontSize": 24,
                                    "fontWeight": "700",
                                    "letterSpacing": 0,
                                    "lineHeight": 32,
                                  }
                                }
                              >
                                Stake ETH and earn
                              </Text>
                            </View>
                            <View
                              style={
                                {
                                  "paddingVertical": 8,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#141618",
                                    "fontFamily": "EuclidCircularB-Medium",
                                    "fontSize": 14,
                                    "fontWeight": "500",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                Stake any amount of ETH
                              </Text>
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#6a737d",
                                    "fontFamily": "EuclidCircularB-Regular",
                                    "fontSize": 14,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                No minimum required.
                              </Text>
                            </View>
                            <View
                              style={
                                {
                                  "paddingVertical": 8,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#141618",
                                    "fontFamily": "EuclidCircularB-Medium",
                                    "fontSize": 14,
                                    "fontWeight": "500",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                Earn ETH rewards
                              </Text>
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#6a737d",
                                    "fontFamily": "EuclidCircularB-Regular",
                                    "fontSize": 14,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                Start earning as soon as you stake. Rewards compound automatically.
                              </Text>
                            </View>
                            <View
                              style={
                                {
                                  "paddingVertical": 8,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#141618",
                                    "fontFamily": "EuclidCircularB-Medium",
                                    "fontSize": 14,
                                    "fontWeight": "500",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                Flexible unstaking
                              </Text>
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#6a737d",
                                    "fontFamily": "EuclidCircularB-Regular",
                                    "fontSize": 14,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                Unstake anytime. Typically takes up to 11 days to process.
                              </Text>
                            </View>
                            <View
                              style={
                                {
                                  "paddingVertical": 8,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#6a737d",
                                    "fontFamily": "EuclidCircularB-RegularItalic",
                                    "fontSize": 12,
                                    "fontStyle": "italic",
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 20,
                                  }
                                }
                              >
                                Staking does not guarantee rewards, and involves risks including a loss of funds.
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "flexDirection": "row",
                                "gap": 16,
                                "paddingHorizontal": 16,
                                "paddingTop": 16,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "flex": 1,
                                }
                              }
                            >
                              <TouchableOpacity
                                accessibilityRole="button"
                                accessible={true}
                                activeOpacity={1}
                                onPress={[Function]}
                                onPressIn={[Function]}
                                onPressOut={[Function]}
                                style={
                                  {
                                    "alignItems": "center",
                                    "alignSelf": "stretch",
                                    "backgroundColor": "transparent",
                                    "borderColor": "#0376c9",
                                    "borderRadius": 24,
                                    "borderWidth": 1,
                                    "flexDirection": "row",
                                    "height": 48,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 16,
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#0376c9",
                                      "fontFamily": "EuclidCircularB-Regular",
                                      "fontSize": 14,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                    }
                                  }
                                >
                                  Learn more
                                </Text>
                              </TouchableOpacity>
                            </View>
                            <View
                              style={
                                {
                                  "flex": 1,
                                }
                              }
                            >
                              <TouchableOpacity
                                accessibilityRole="button"
                                accessible={true}
                                activeOpacity={1}
                                onPress={[Function]}
                                onPressIn={[Function]}
                                onPressOut={[Function]}
                                style={
                                  {
                                    "alignItems": "center",
                                    "alignSelf": "stretch",
                                    "backgroundColor": "#0376c9",
                                    "borderRadius": 24,
                                    "flexDirection": "row",
                                    "height": 48,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 16,
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#ffffff",
                                      "fontFamily": "EuclidCircularB-Regular",
                                      "fontSize": 14,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                    }
                                  }
                                >
                                  Got it
                                </Text>
                              </TouchableOpacity>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    collapsable={false}
                    pointerEvents="box-none"
                    style={{}}
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`Stake Modals With Stake Sdk Provider should render correctly stake screen with stake sdk provider and resolve the stake context 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": null,
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#141618",
                    "fontFamily": "EuclidCircularB-Bold",
                    "fontSize": 18,
                    "fontWeight": "700",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Stake ETH
              </Text>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "flex-end",
                  "bottom": 0,
                  "justifyContent": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  {
                    "paddingHorizontal": 18,
                    "paddingVertical": 8,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#0376c9",
                      "fontFamily": "EuclidCircularB-Regular",
                      "fontSize": 14,
                      "fontWeight": "400",
                    }
                  }
                >
                  Cancel
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RCTSafeAreaView
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                            },
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                              "flexDirection": "column",
                              "justifyContent": "center",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                              "gap": 16,
                              "justifyContent": "center",
                            }
                          }
                        >
                          <View>
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#141618",
                                  "fontFamily": "EuclidCircularB-Regular",
                                  "fontSize": 12,
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 20,
                                }
                              }
                            >
                              Balance
                              : 
                              0 ETH
                            </Text>
                          </View>
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "gap": 4,
                                "justifyContent": "center",
                              }
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#9fa6ae",
                                  "fontFamily": "EuclidCircularB-Bold",
                                  "fontSize": 32,
                                  "fontWeight": "700",
                                  "letterSpacing": 0,
                                  "lineHeight": 40,
                                }
                              }
                            >
                              0
                            </Text>
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#9fa6ae",
                                  "fontFamily": "EuclidCircularB-Bold",
                                  "fontSize": 32,
                                  "fontWeight": "700",
                                  "letterSpacing": 0,
                                  "lineHeight": 40,
                                }
                              }
                            >
                              ETH
                            </Text>
                          </View>
                          <View>
                            <TouchableOpacity
                              accessibilityRole="button"
                              accessible={true}
                              activeOpacity={1}
                              onPress={[Function]}
                              style={
                                {
                                  "alignItems": "center",
                                  "alignSelf": "flex-start",
                                  "backgroundColor": "#ffffff",
                                  "borderColor": "#bbc0c566",
                                  "borderRadius": 16,
                                  "borderWidth": 1,
                                  "flexDirection": "row",
                                  "height": 32,
                                  "justifyContent": "center",
                                  "paddingHorizontal": 16,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="none"
                                style={
                                  {
                                    "color": "#141618",
                                    "fontFamily": "EuclidCircularB-Medium",
                                    "fontSize": 14,
                                    "fontWeight": "500",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                0 USD
                              </Text>
                              <SvgMock
                                color="#141618"
                                height={16}
                                name="SwapVertical"
                                style={
                                  {
                                    "height": 16,
                                    "marginLeft": 8,
                                    "width": 16,
                                  }
                                }
                                width={16}
                              />
                            </TouchableOpacity>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "borderColor": "#bbc0c566",
                              "padding": 16,
                              "paddingBottom": 8,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "backgroundColor": "#ffffff",
                                "borderColor": "#bbc0c5",
                                "borderRadius": 8,
                                "borderWidth": 1,
                                "justifyContent": "center",
                                "paddingHorizontal": 16,
                                "paddingVertical": 8,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "width": "100%",
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "gap": 4,
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#141618",
                                      "fontFamily": "EuclidCircularB-Medium",
                                      "fontSize": 14,
                                      "fontWeight": "500",
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                    }
                                  }
                                >
                                  MetaMask Pool
                                </Text>
                                <TouchableOpacity
                                  accessibilityLabel="Learn More"
                                  onPress={[Function]}
                                >
                                  <SvgMock
                                    color="#6a737d"
                                    height={20}
                                    name="Question"
                                    style={
                                      {
                                        "height": 20,
                                        "width": 20,
                                      }
                                    }
                                    width={20}
                                  />
                                </TouchableOpacity>
                              </View>
                              <View
                                style={
                                  {
                                    "alignItems": "flex-end",
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#1c8234",
                                      "fontFamily": "EuclidCircularB-Medium",
                                      "fontSize": 14,
                                      "fontWeight": "500",
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                    }
                                  }
                                >
                                  0%
                                </Text>
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#6a737d",
                                      "fontFamily": "EuclidCircularB-Medium",
                                      "fontSize": 12,
                                      "fontWeight": "500",
                                      "letterSpacing": 0,
                                      "lineHeight": 20,
                                    }
                                  }
                                >
                                  Estimated annual rewards
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "backgroundColor": "#ffffff",
                              "flexDirection": "row",
                              "gap": 8,
                              "justifyContent": "center",
                              "padding": 16,
                            }
                          }
                        >
                          <TouchableOpacity
                            accessibilityRole="button"
                            accessible={true}
                            activeOpacity={1}
                            onPress={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#ffffff",
                                "borderColor": "#bbc0c5",
                                "borderRadius": 20,
                                "borderWidth": 1,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 40,
                                "justifyContent": "center",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="none"
                              style={
                                {
                                  "color": "#141618",
                                  "fontFamily": "EuclidCircularB-Medium",
                                  "fontSize": 14,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                }
                              }
                            >
                              25%
                            </Text>
                          </TouchableOpacity>
                          <TouchableOpacity
                            accessibilityRole="button"
                            accessible={true}
                            activeOpacity={1}
                            onPress={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#ffffff",
                                "borderColor": "#bbc0c5",
                                "borderRadius": 20,
                                "borderWidth": 1,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 40,
                                "justifyContent": "center",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="none"
                              style={
                                {
                                  "color": "#141618",
                                  "fontFamily": "EuclidCircularB-Medium",
                                  "fontSize": 14,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                }
                              }
                            >
                              50%
                            </Text>
                          </TouchableOpacity>
                          <TouchableOpacity
                            accessibilityRole="button"
                            accessible={true}
                            activeOpacity={1}
                            onPress={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#ffffff",
                                "borderColor": "#bbc0c5",
                                "borderRadius": 20,
                                "borderWidth": 1,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 40,
                                "justifyContent": "center",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="none"
                              style={
                                {
                                  "color": "#141618",
                                  "fontFamily": "EuclidCircularB-Medium",
                                  "fontSize": 14,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                }
                              }
                            >
                              75%
                            </Text>
                          </TouchableOpacity>
                          <TouchableOpacity
                            accessibilityRole="button"
                            accessible={true}
                            activeOpacity={1}
                            onPress={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#ffffff",
                                "borderColor": "#bbc0c5",
                                "borderRadius": 20,
                                "borderWidth": 1,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 40,
                                "justifyContent": "center",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <SvgMock
                              color="#141618"
                              height={16}
                              name="Sparkle"
                              style={
                                {
                                  "height": 16,
                                  "marginRight": 8,
                                  "width": 16,
                                }
                              }
                              width={16}
                            />
                            <Text
                              accessibilityRole="none"
                              style={
                                {
                                  "color": "#141618",
                                  "fontFamily": "EuclidCircularB-Medium",
                                  "fontSize": 14,
                                  "fontWeight": "500",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                }
                              }
                            >
                              Max
                            </Text>
                          </TouchableOpacity>
                        </View>
                        <View
                          style={
                            [
                              {
                                "paddingHorizontal": 25,
                              },
                              {
                                "paddingHorizontal": 24,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              {
                                "flexDirection": "row",
                                "justifyContent": "space-around",
                              }
                            }
                          >
                            <TouchableOpacity
                              accessibilityRole="button"
                              accessible={true}
                              onPress={[Function]}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flex": 1,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 20,
                                    "paddingVertical": 12,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                style={
                                  [
                                    {
                                      "color": "#141618",
                                      "fontFamily": "EuclidCircularB-Regular",
                                      "fontSize": 30,
                                      "fontWeight": "400",
                                      "marginVertical": 2,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    [
                                      {
                                        "color": "#141618",
                                        "fontSize": 30,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                1
                              </Text>
                            </TouchableOpacity>
                            <TouchableOpacity
                              accessibilityRole="button"
                              accessible={true}
                              onPress={[Function]}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flex": 1,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 20,
                                    "paddingVertical": 12,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                style={
                                  [
                                    {
                                      "color": "#141618",
                                      "fontFamily": "EuclidCircularB-Regular",
                                      "fontSize": 30,
                                      "fontWeight": "400",
                                      "marginVertical": 2,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    [
                                      {
                                        "color": "#141618",
                                        "fontSize": 30,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                2
                              </Text>
                            </TouchableOpacity>
                            <TouchableOpacity
                              accessibilityRole="button"
                              accessible={true}
                              onPress={[Function]}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flex": 1,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 20,
                                    "paddingVertical": 12,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                style={
                                  [
                                    {
                                      "color": "#141618",
                                      "fontFamily": "EuclidCircularB-Regular",
                                      "fontSize": 30,
                                      "fontWeight": "400",
                                      "marginVertical": 2,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    [
                                      {
                                        "color": "#141618",
                                        "fontSize": 30,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                3
                              </Text>
                            </TouchableOpacity>
                          </View>
                          <View
                            style={
                              {
                                "flexDirection": "row",
                                "justifyContent": "space-around",
                              }
                            }
                          >
                            <TouchableOpacity
                              accessibilityRole="button"
                              accessible={true}
                              onPress={[Function]}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flex": 1,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 20,
                                    "paddingVertical": 12,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                style={
                                  [
                                    {
                                      "color": "#141618",
                                      "fontFamily": "EuclidCircularB-Regular",
                                      "fontSize": 30,
                                      "fontWeight": "400",
                                      "marginVertical": 2,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    [
                                      {
                                        "color": "#141618",
                                        "fontSize": 30,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                4
                              </Text>
                            </TouchableOpacity>
                            <TouchableOpacity
                              accessibilityRole="button"
                              accessible={true}
                              onPress={[Function]}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flex": 1,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 20,
                                    "paddingVertical": 12,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                style={
                                  [
                                    {
                                      "color": "#141618",
                                      "fontFamily": "EuclidCircularB-Regular",
                                      "fontSize": 30,
                                      "fontWeight": "400",
                                      "marginVertical": 2,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    [
                                      {
                                        "color": "#141618",
                                        "fontSize": 30,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                5
                              </Text>
                            </TouchableOpacity>
                            <TouchableOpacity
                              accessibilityRole="button"
                              accessible={true}
                              onPress={[Function]}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flex": 1,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 20,
                                    "paddingVertical": 12,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                style={
                                  [
                                    {
                                      "color": "#141618",
                                      "fontFamily": "EuclidCircularB-Regular",
                                      "fontSize": 30,
                                      "fontWeight": "400",
                                      "marginVertical": 2,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    [
                                      {
                                        "color": "#141618",
                                        "fontSize": 30,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                6
                              </Text>
                            </TouchableOpacity>
                          </View>
                          <View
                            style={
                              {
                                "flexDirection": "row",
                                "justifyContent": "space-around",
                              }
                            }
                          >
                            <TouchableOpacity
                              accessibilityRole="button"
                              accessible={true}
                              onPress={[Function]}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flex": 1,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 20,
                                    "paddingVertical": 12,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                style={
                                  [
                                    {
                                      "color": "#141618",
                                      "fontFamily": "EuclidCircularB-Regular",
                                      "fontSize": 30,
                                      "fontWeight": "400",
                                      "marginVertical": 2,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    [
                                      {
                                        "color": "#141618",
                                        "fontSize": 30,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                7
                              </Text>
                            </TouchableOpacity>
                            <TouchableOpacity
                              accessibilityRole="button"
                              accessible={true}
                              onPress={[Function]}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flex": 1,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 20,
                                    "paddingVertical": 12,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                style={
                                  [
                                    {
                                      "color": "#141618",
                                      "fontFamily": "EuclidCircularB-Regular",
                                      "fontSize": 30,
                                      "fontWeight": "400",
                                      "marginVertical": 2,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    [
                                      {
                                        "color": "#141618",
                                        "fontSize": 30,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                8
                              </Text>
                            </TouchableOpacity>
                            <TouchableOpacity
                              accessibilityRole="button"
                              accessible={true}
                              onPress={[Function]}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flex": 1,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 20,
                                    "paddingVertical": 12,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                style={
                                  [
                                    {
                                      "color": "#141618",
                                      "fontFamily": "EuclidCircularB-Regular",
                                      "fontSize": 30,
                                      "fontWeight": "400",
                                      "marginVertical": 2,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    [
                                      {
                                        "color": "#141618",
                                        "fontSize": 30,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                9
                              </Text>
                            </TouchableOpacity>
                          </View>
                          <View
                            style={
                              {
                                "flexDirection": "row",
                                "justifyContent": "space-around",
                              }
                            }
                          >
                            <TouchableOpacity
                              onPress={[Function]}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flex": 1,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 20,
                                    "paddingVertical": 12,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                style={
                                  [
                                    {
                                      "color": "#141618",
                                      "fontFamily": "EuclidCircularB-Regular",
                                      "fontSize": 30,
                                      "fontWeight": "400",
                                      "marginVertical": 2,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    [
                                      {
                                        "color": "#141618",
                                        "fontSize": 30,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                .
                              </Text>
                            </TouchableOpacity>
                            <TouchableOpacity
                              accessibilityRole="button"
                              accessible={true}
                              onPress={[Function]}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flex": 1,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 20,
                                    "paddingVertical": 12,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                style={
                                  [
                                    {
                                      "color": "#141618",
                                      "fontFamily": "EuclidCircularB-Regular",
                                      "fontSize": 30,
                                      "fontWeight": "400",
                                      "marginVertical": 2,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    undefined,
                                    [
                                      {
                                        "color": "#141618",
                                        "fontSize": 30,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                0
                              </Text>
                            </TouchableOpacity>
                            <TouchableOpacity
                              delayLongPress={500}
                              onLongPress={[Function]}
                              onPress={[Function]}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flex": 1,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 20,
                                    "paddingVertical": 12,
                                  },
                                  undefined,
                                ]
                              }
                              testID="keypad-delete-button"
                            >
                              <Text
                                allowFontScaling={false}
                                style={
                                  [
                                    {
                                      "color": undefined,
                                      "fontSize": 12,
                                    },
                                    [
                                      {
                                        "color": "#141618",
                                        "fontSize": 30,
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 25,
                                        "marginTop": 5,
                                      },
                                    ],
                                    {
                                      "fontFamily": "Ionicons",
                                      "fontStyle": "normal",
                                      "fontWeight": "normal",
                                    },
                                    {},
                                  ]
                                }
                              >
                                
                              </Text>
                            </TouchableOpacity>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "padding": 16,
                            }
                          }
                        >
                          <TouchableOpacity
                            accessibilityRole="button"
                            accessible={true}
                            activeOpacity={1}
                            disabled={true}
                            onPress={[Function]}
                            onPressIn={[Function]}
                            onPressOut={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#0376c9",
                                "borderRadius": 24,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "opacity": 0.5,
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#ffffff",
                                  "fontFamily": "EuclidCircularB-Regular",
                                  "fontSize": 14,
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 22,
                                }
                              }
                            >
                              Enter amount
                            </Text>
                          </TouchableOpacity>
                        </View>
                      </View>
                    </RCTSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;
